ecmascript/parser/tests/test262-error-references/fail/75f1656578c2d7e8.js.stderr
error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/75f1656578c2d7e8.js:1:2
  |
1 | x\u005c
  |  ^^^^^^

